k8s/network-policies/allow-redis-ingress.yaml
# Ingress to redis: from customer-user-service
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-ingress
  namespace: svp
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: customer-user-service
      ports:
        - protocol: TCP
          port: 6379
